# utmos

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: expresso_array_job.sh  libritts_array_job.sh  mos.py
src/utmos/: cli.py  gui.py  lightning_module.py  score.py
