[project]
name = "utmos"
version = "0.1.1"
description = "UT-Sarulab MOS prediction system using SSL models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cached-path",
    "click",
    "fairseq",
    "numpy",
    "omegaconf",
    "pytorch-lightning",
    "torchaudio",
    "torchcodec>=0.9.0",
    "transformers",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
fairseq = { git = "https://github.com/facebookresearch/fairseq.git" }
